# Fck-prediction

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
data/: Concrete_Data.xls
scripts/: analyze_legacy.py
src/fck_prediction/: cli.py  config.py  v15.py
src/fck_prediction/data/: loader.py
src/fck_prediction/evaluation/: cross_validation.py  ifi.py  learning_curves.py  model_confidence_set.py  monte_carlo.py  normality.py  picp.py  residual_diagnostics.py  statistical_tests.py  summary_stats.py
src/fck_prediction/inference/: predictor.py
src/fck_prediction/interpretation/: pdp.py  permutation_importance.py  shap_analysis.py
src/fck_prediction/models/: registry.py
src/fck_prediction/preprocessing/: cleaners.py  cleaning_optimizer.py
src/fck_prediction/training/: trainer.py
src/fck_prediction/visualization/: correlation.py  performance_plots.py  prediction_plots.py  radar_chart.py  taylor_diagram.py
